--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,9 +3,6 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-
   /* Cores Principais */
   --color-primary: #efefef; /* Branco */
   --color-secondary: #06080a; /* Preto Suave */
@@ -35,15 +32,8 @@
   --black-opacity-60: rgba(6, 8, 10, 0.6); /* Preto 60% */
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
+  color: var(--color-secondary);
+  background: var(--color-primary);
   font-family: Arial, Helvetica, sans-serif;
 }
