--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,7 +26,7 @@
   --purple-200: #9956f6; /* Roxo Destaque 100% */
   --purple-300: #594d6c; /* Roxo Escuro 10% */
 
-  
+  /* Outros Tons */
   --purple-400: #9956f6; /* Roxo Destaque 60% */
   --black-opacity-80: rgba(6, 8, 10, 0.8); /* Preto 80% */
   --black-opacity-60: rgba(6, 8, 10, 0.6); /* Preto 60% */
