Atualiza para não permitir selecionar textos e imagens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,3 +67,11 @@ body::-webkit-scrollbar-thumb {
   border-radius: 10px;
   background-color: var(--color-secondary);
 }
+
+.no-copy {
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+
