--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: "Inter";
-  src: url("/fonts/inter/Inter-Regular.woff") format("truetype");
+  src: url("/fonts/inter/Inter-Regular.ttf") format("truetype");
   font-style: normal;
   font-display: swap;
 }
